created business and businessList components to show businessData, also created a simple header component.

--- a/ravenous-app/src/App.css
+++ b/ravenous-app/src/App.css
@@ -1,5 +1,5 @@
 /* Import the business.css stylesheet */
-@import './components/business.css';
+/* @import './components/business.css'; */
 
 .App {
   text-align: center;
