refactored business, businessList components and styling to look a bit nice using flexbox css. took out some MUI css. got image display to work in business component

--- a/ravenous-app/src/components/business.css
+++ b/ravenous-app/src/components/business.css
@@ -1,6 +1,6 @@
 /* Business Card Container */
 .business-card {
-    display: flex;
+    flex-grow: 3;
     border: 1px solid #ccc;
     margin: 16px;
     padding: 16px;
