--- a/ravenous-app/src/components/searchBar.css
+++ b/ravenous-app/src/components/searchBar.css
@@ -2,7 +2,7 @@
 
 .search-bar {
     width: 100%;
-    background-color: #f8f8f8;
+    background-color: #a6cfed;
     padding: 20px 0;
     display: flex;
     justify-content: space-around;
@@ -17,6 +17,8 @@
   
   .filter-options label {
     margin-right: 10px;
+    margin-top: 3px;
+    margin-bottom: 3px;
   }
   
   /* Add more styling as needed */
