tried to add yelp api call functionality, but ran into npm issues and webpack stuff idk

--- a/ravenous-app/src/components/searchBar.module.css
+++ b/ravenous-app/src/components/searchBar.module.css
@@ -34,8 +34,8 @@
   
   .SearchBarSortOptions li.active,
   .SearchBarSortOptions li.active:hover {
-    border-bottom: 1px solid #f0c36c;
-    color: #f0c36c;
+    border-bottom: 1px solid #088416;
+    color: #088416;
   }
   
   .SearchBarFields {
